@@ -49,9 +49,10 @@ class RebuilddConfig(object, ConfigParser.ConfigParser):
         self.set('build', 'build_cmd', 'pbuilder build --basetgz /var/cache/pbuilder/%s.tgz %s_%s.dsc')
         self.set('build', 'post_build_cmd', '')
         self.set('build', 'dists', 'etch lenny sid')
-        self.set('build', 'archs', 'i386 all')
         self.set('build', 'work_dir', '/var/cache/rebuildd/build')
         self.set('build', 'database_uri', 'sqlite:///var/lib/rebuildd/rebuildd.db')
+        self.set('build', 'build_more_recent', '1')
+        self.set('build', 'build_arch_any', '1')
 
         self.set('mail', 'from', 'rebuildd@localhost')
         self.set('mail', 'mailto', 'rebuildd@localhost')
